<resources>
    <string name="app_name">ChatCenter</string>
    <string name="msg_messages_empty">チャットがありません。</string>
    <string name="chat_network_error_message">インターネット接続がありません</string>
    <string name="chat_textbox_hint_message">メッセージを入力</string>
    <string name="chat_send_button">送信</string>
    <string name="dialog_error_body">サーバと通信が行えませんでした。通信状況を確認して下さい。</string>
    <string name="dialog_tel_title">%1$sへ問い合わせ</string>
    <string name="dialog_tel_body">電話アプリを起動しますか？</string>
    <string name="dialog_tel_number_not_register_body">電話番号が登録されておりません</string>
    <string name="dialog_auth_error_body">ログアウトされました。再度ログインを行ってください。</string>
    <string name="widget_create_error">項目を確認してください。</string>
    <string name="dialog_no_select_chat_body">チャットを選択してください。</string>
    <string name="dialog_chat_delete_error_body">削除できませんでした。通信状況を確認して下さい。</string>
    <string name="chatcenter_dialog_message_send_error_body">メッセージが送信できませんでした。通信状況を確認して下さい。</string>
    <string name="chatcenter_dialog_message_error_body">エラーが起きました。通信状況を確認して下さい。</string>
    <string name="chatcenter_messages_title">メッセージ</string>
    <string name="chatcenter_messages_signout">ログアウト</string>
    <string name="location_dialog_title">どの位置情報を共有しますか？</string>
    <string name="location_title">ライブ位置情報</string>
    <string name="location_live_title">ライブ位置情報</string>
    <string name="share_location_live_title">ライブ位置情報</string>
    <string name="location_select_map">地図から選択</string>
    <string name="location_select_live">ライブ位置情報</string>
    <string name="sending_location">位置情報共有中</string>
    <string name="location_live">Live</string>
    <string name="location_stop">ストップ</string>
    <string name="location_share_mylive">自分の位置情報を共有</string>
    <string name="location_share_time">シェアする時間を設定してください</string>
    <string name="share_time_format_min">%d分</string>
    <string name="share_time_format_hour">%d時間</string>
    <string name="datetime_format_full">yyyy/MM/dd HH:mm:ss</string>
    <string name="datetime_format_default">yyyy/MM/dd HH:mm</string>
    <string name="datetime_today">今日</string>
    <string name="datetime_yesterday">昨日</string>
    <string name="datetime_2_days_ago">一昨日</string>
    <string name="datetime_format_time">HH:mm</string>
    <string name="datetime_format_day">MM/dd</string>
    <string name="datetime_format_today">今日 HH:mm</string>
    <string name="message_status_read">既読</string>
    <string name="message_status_sending">送信中</string>
    <string name="message_status_sent">送信済み</string>
    <string name="message_status_send_failed">送信失敗</string>
    <string name="webview_header" translatable="false">WebView</string>
    <string name="save">保存</string>
    <string name="you">あなた:&#160;</string>
    <string name="no_message">メッセージなし</string>
    <string name="sent_a_widget">ウィジェットを送信しました。</string>
    <string name="called">電話しました。</string>
    <string name="dialog_confirm_reply_sticker">以下のメッセージを送ります。</string>
    <string name="cancel">キャンセル</string>
    <string name="message_reply_sticker_header">私の答えは</string>
    <string name="done">決定</string>
    <string name="sticker_video_call_now"><![CDATA[<b>%s</b> が 通話を要求しました。<br/>]]></string>
    <string name="sticker_video_call_title" formatted="false"><![CDATA[<b>%s</b> が <b>%s</b> に通話しました。<br/>]]></string>
    <string name="sticker_video_call_missed">応答がありませんでした。</string>
    <string name="sticker_video_call_time" formatted="false">%02d:%02d</string>
    <string name="select_file">送信する画像かPDFを選択してください</string>
    <string name="camera_permission_denied">カメラへのアクセスを拒否すると撮影できません</string>
    <string name="storage_permission_denied">外部ストレージへのアクセスを拒否するとファイルを送信できません</string>
    <string name="location_permission_denied">位置情報へのアクセスを拒否すると地図を送信できません</string>
    <string name="video_permission_denied">カメラへのアクセスを拒否するとビデオチャットを開始できません</string>
    <string name="audio_permission_denied">マイクへのアクセスを拒否するとビデオチャットを開始できません</string>
    <string name="alert">ご注意</string>
    <string name="file_uploading">アップロード中…</string>
    <string name="channel_detail_header">チャネル詳細</string>
    <string name="info_header">インフォメーション</string>
    <string name="about_header">ChatCenter iOについて</string>
    <string name="terms_of_service">利用規約</string>
    <string name="privacy_policy">プライバシーポリシー</string>
    <string name="service_level_agreement">サービスレベル契約</string>
    <string name="copyright">著作権情報</string>
    <string name="assignee_or_follower">担当者/閲覧者</string>
    <string name="assignee">担当者</string>
    <string name="followers">閲覧者</string>
    <string name="no_assignee">担当者なし</string>
    <string name="no_followers">閲覧者なし</string>
    <string name="status_online">オンライン</string>
    <string name="google_map">Googleマップ</string>
    <string name="message_reply_choosed_value">%sを選択しました。</string>
    <string name="share_image">画像をシェアする。</string>
    <string name="download_image_failed">画像の取得に失敗しました。</string>
    <string name="online_at" formatted="false">%s前にオンライン</string>
    <string name="year">年</string>
    <string name="years">年</string>
    <string name="month">ヶ月</string>
    <string name="months">ヶ月</string>
    <string name="day">日</string>
    <string name="days">日</string>
    <string name="hour">時間</string>
    <string name="hours">時間</string>
    <string name="second">秒</string>
    <string name="seconds">秒</string>
    <string name="minute">分</string>
    <string name="minutes">分</string>
    <string name="sticker_menu_header">ウィジェットメニュー</string>
    <string name="sticker_menu_close">閉じる</string>
    <string name="sticker_label_confirm">質問</string>
    <string name="sticker_label_calendar">スケジュール</string>
    <string name="sticker_label_location">位置情報</string>
    <string name="sticker_label_image">写真</string>
    <string name="sticker_label_phrase">定型文</string>
    <string name="sticker_label_camera">カメラ</string>
    <string name="sticker_label_video_call">ビデオチャット</string>
    <string name="fixed_phrases">定型文</string>
    <string name="tap_to_select">タップして選択してください</string>
    <string name="fixed_phrases_session_label_app">アプリ推奨</string>
    <string name="fixed_phrases_session_label_org">チーム推奨</string>
    <string name="fixed_phrases_session_label_myphrases">自分専用</string>
    <string name="fixed_phrases_myphrase_empty">自分専用定型文を作っていません</string>
    <string name="fixed_phrases_no_app_fixed_phrases">アプリ推奨定型文がありません</string>
    <string name="fixed_phrases_no_org_fixed_phrases">チーム推奨定型文がありません</string>
    <string name="enter_question">質問を入力してください</string>
    <string name="answer_type">質問の種類を選んでください</string>
    <string name="accept">はい</string>
    <string name="alert_message_text_too_long" formatted="false">%d文字以内で入力してください。</string>
    <string name="schedule_guide">日付と時刻をタッブして選んでください</string>
    <string name="schedule_title">候補日時</string>
    <string name="preview">プレビュー</string>
    <string name="next">次へ</string>
    <string name="schedule_monday">月</string>
    <string name="schedule_tuesday">火</string>
    <string name="schedule_wednesday">水</string>
    <string name="schedule_thursday">木</string>
    <string name="schedule_friday">金</string>
    <string name="schedule_saturday">土</string>
    <string name="schedule_sunday">日</string>
    <string name="schedule_widget_title">以下から都合の良い日時を選択してください。</string>
    <string name="schedule_create_other">他の日時を選択する</string>
    <string name="answer_type_yes_no">はい／いいえ</string>
    <string name="answer_type_multi_choice">単一選択</string>
    <string name="answer_type_checkbox">複数選択</string>
    <string name="answer_type_leaner_scale">段階評価</string>
    <string-array name="linear_scale_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="ok">OK</string>
    <string name="add_more_options">項目を追加</string>
    <string name="scale_to">から</string>
    <string name="default_scale_label_from">非常に悪い</string>
    <string name="default_scale_label_to">非常に良い</string>
    <string name="preview_title">プレビュー</string>
    <string name="hour_am">午前</string>
    <string name="hour_pm">午後</string>
    <string name="sticker_label_phone_call">電話する</string>
    <string name="suggestion">サジェスチョン</string>
    <string name="ringing">呼び出し中…</string>
    <string name="calling">着信中…</string>
    <string name="video_off">ビデオはオフです</string>
    <string name="widget_question_hint">質問</string>
    <string name="processing">お待ちください…</string>
    <string name="option">オプション%d</string>
    <string name="funnel">ファネル</string>
    <string name="note">ノート</string>
    <string name="close_conversation">対応を終了する</string>
    <string name="delete_conversation">対応を削除する</string>
    <string name="open_conversation">対応を再開する</string>
    <string name="schedule_date_format">yyyy年M月d日 EEEE</string>
    <string name="date_format_short">ah:mm</string>
    <string name="date_format_date">M月d日(EEE)</string>
    <string name="date_format_date_time">M月d日(EEE) h:mm a</string>
    <string name="schedule_hour">%2$s%1$d時</string>
    <string name="note_hint">内容</string>
    <string name="business_funnel">ファネル</string>
    <string name="message_status">ステータス</string>
    <string name="unassigned_status">未対応</string>
    <string name="assigned_status">担当中</string>
    <string name="close_status">対応済</string>
    <string name="all">全て</string>
    <string name="conversation_closed">対応を終了しました。</string>
    <string name="conversation_opened">対応を再開しました。</string>
    <string name="segment_mine">Mine</string>
    <string name="segment_team">Team\'s</string>
    <string name="segment_everyone">Everyone\'s</string>
    <string name="settings">設定</string>
    <string name="change_app">アプリを選択してください</string>
    <string name="btn_switch">切り替え</string>
    <string name="inbox">受信トレイ</string>
    <string name="select_user_to_call">ユーザーを選択してください</string>
    <string name="settings_title">ChatCenter iO for Android\nVersion %s</string>
    <string name="infinite">∞</string>
    <string name="api_request_error">エラーが発生しました。 後でもう一度お試しください</string>
    <string name="connecting">接続中</string>
    <string name="internet_connected">接続済み</string>
    <string name="venue_widget_title">地図</string>
    <string name="person_name_suffix">さん</string>
    <string name="open_dashboard">ダッシュボードを開く</string>
    <string name="about_ChatCenter_url">https://www.chatcenter.io/ja/</string>
    <string name="terms_of_service_url">https://www.chatcenter.io/ja/termsofservice/</string>
    <string name="privacy_policy_url">https://www.chatcenter.io/ja/privacypolicy/</string>
    <string name="sla_url">https://www.chatcenter.io/ja/sla/</string>
    <string name="alert_schedule_select_schedule_slot">最低1つ以上は日時を選択してください</string>
    <string name="alert_question_widget_title_too_long">タイトルは%d文字以内にしてください。</string>
    <string name="alert_question_widget_question_too_long">質問文は%d文字以内にしてください。</string>
    <string name="alert_question_widget_choice_too_many">選択肢は%d個までにしてください</string>
    <string name="guest">ゲスト</string>
    <string name="alert_can_not_send_without_message">インターネット接続がないためメッセージを送信できません。</string>
    <string name="user_typing"><![CDATA[<strong>%s</strong>さんが入力中]]></string>
    <string name="conversation_deleted">削除しました。</string>
    <string name="delete">削除</string>
    <string name="close">終了</string>
    <string name="open">再開</string>
    <string name="assign">担当</string>
    <string name="confirm_open_conversation">チャットを再開しますか？</string>
    <string name="confirm_close_conversation">チャットを終了しますか？</string>
    <string name="confirm_delete_conversation">チャットを削除しますか？</string>
    <string name="schedule_all_day">終日</string>
</resources>