<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_fixed_phrase"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/ToolbarStyle">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fixed_phrases"
                android:textColor="@color/color_chatcenter_title_text"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap_to_select"
                android:textColor="@color/color_chatcenter_title_text"
                android:textSize="10sp"/>
        </LinearLayout>

    </android.support.v7.widget.Toolbar>


    <RadioGroup
        android:id="@+id/segment_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <RadioButton
            android:id="@+id/radio_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_segment_control_left"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:padding="@dimen/margin5dp"
            android:text="@string/segment_mine"
            android:textColor="@drawable/btn_segment_control_text_color"/>

        <RadioButton
            android:id="@+id/radio_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-1px"
            android:layout_weight="1"
            android:background="@drawable/btn_segment_control_middle"
            android:button="@null"
            android:gravity="center"
            android:padding="@dimen/margin5dp"
            android:text="@string/segment_team"
            android:textColor="@drawable/btn_segment_control_text_color"/>

        <RadioButton
            android:id="@+id/radio_everyone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-1px"
            android:layout_weight="1"
            android:background="@drawable/btn_segment_control_right"
            android:button="@null"
            android:gravity="center"
            android:padding="@dimen/margin5dp"
            android:text="@string/segment_everyone"
            android:textColor="@drawable/btn_segment_control_text_color"/>

    </RadioGroup>

    <ListView
        android:id="@+id/lv_fixed_phrases"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"/>
</LinearLayout>
