<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/scale_from"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_spinner"
            android:entries="@array/linear_scale_list"
            android:gravity="center"
            android:textColor="@color/color_chatcenter_text">
        </android.support.v7.widget.AppCompatSpinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/scale_to"
            android:textColor="@color/color_chatcenter_text"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/scale_to"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_spinner"
            android:entries="@array/linear_scale_list"
            android:gravity="center"
            android:textColor="@color/color_chatcenter_text">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="10"
            android:textColor="@color/color_chatcenter_text"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edit_label1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edittext_border"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingLeft="8dp"
            android:text="@string/default_scale_label_from"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="10"
            android:textColor="@color/color_chatcenter_text"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edit_label2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edittext_border"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingLeft="8dp"
            android:text="@string/default_scale_label_to"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>
