<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/ToolbarStyle">

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_line_width"
        android:layout_below="@id/toolbar"
        android:background="@color/color_chatcenter_title_divider"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textColor="@color/color_chatcenter_text">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin10dp"
                    android:layout_marginTop="@dimen/margin10dp"
                    android:text="@string/enter_question"
                    android:textColor="@color/color_chatcenter_text"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <EditText
                        android:id="@+id/edit_question"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/edittext_border"
                        android:gravity="top|left"
                        android:hint="@string/widget_question_hint"
                        android:padding="@dimen/margin8dp"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tv_remaining_characters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="@dimen/margin8dp"
                        android:textColor="@color/color_chatcenter_text"
                        android:textSize="12sp"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin10dp"
                    android:layout_marginTop="@dimen/margin10dp"
                    android:text="@string/answer_type"
                    android:textColor="@color/color_chatcenter_text"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_spinner"
                    android:spinnerMode="dropdown">
                </Spinner>


            </LinearLayout>

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>